# ros2_object_tracker

./: .gitignore  Pipfile  README.md  package.xml  setup.cfg  setup.py
data/: 1478019952686311006.txt  1478019953180167674.txt  1478019953689774621.txt  1478019954186238236.txt  1478019954685370994.txt
notebooks/: SORT.ipynb
notebooks/.ipynb_checkpoints/: SORT-checkpoint.ipynb
src/object_tracking/: association.py  kalman_filter.py  object_tracking_node.py  tracking.py
tests/: test_kalman_filter.py  test_tracking.py  test_tracking_node.py  utils.py
