<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>ros2_object_tracking</name>
    <version>0.0.1</version>
    <description>ROS2 node for simple object tracking using the SORT algorithm.</description>

    <maintainer email="andreas.klintberg@gmail.com">Andreas Klintberg</maintainer>
    <license>MIT</license>

    <depend>rclpy</depend>
    <depend>darknet_ros_msgs</depend>
    <depend>object_analytics_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>object_msgs</depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>